--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,6 @@ name: FlashCryptoSenders CI/CD and Notifications
 on:
   push:
     branches: [main]
-  pull_request:
-    branches: [main]
   schedule:
     - cron: '0 */2 * * *'  # Runs every 2 hours
 
@@ -14,26 +12,16 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
 
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.9'
 
-    - name: Cache pip packages
-      uses: actions/cache@v3
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
-
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install requests
 
     - name: Run notification script
       env:
@@ -45,12 +33,6 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git add articles/
-        git commit -m "Add new article" || echo "No changes to commit"
+        git add .
+        git commit -m "Update articles and notifications" || echo "No changes to commit"
         git push
-
-    - name: Upload artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: generated-articles
-        path: articles/
