--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,7 @@ on:
     branches: [main]
   schedule:
     - cron: '0 */2 * * *'  # Runs every 2 hours
+  workflow_dispatch:  # Allows manual trigger
 
 jobs:
   build-and-notify:
@@ -33,6 +34,7 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
+        git pull --rebase origin main  # Integrates remote changes
         git add .
         git commit -m "Update articles and notifications" || echo "No changes to commit"
-        git push
+        git push origin main
